Added session authentication & removed token authentication
