# frontend/swagger.json
@@ -13,7 +13,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -59,7 +59,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -84,7 +84,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -112,7 +112,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -158,7 +158,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -202,7 +202,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -227,7 +227,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -273,7 +273,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -298,7 +298,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -344,7 +344,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -369,7 +369,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -415,7 +415,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -440,7 +440,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -486,7 +486,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -511,7 +511,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -557,7 +557,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -582,7 +582,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -628,7 +628,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -653,7 +653,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -699,7 +699,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -724,7 +724,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -770,7 +770,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -805,7 +805,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -858,7 +858,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -891,7 +891,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -919,7 +919,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -972,7 +972,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1007,7 +1007,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1063,7 +1063,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1088,7 +1088,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1106,7 +1106,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1152,7 +1152,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1169,6 +1169,24 @@
                 }
             }
         },
+        "/api/is_authenticated/": {
+            "get": {
+                "operationId": "api_is_authenticated_retrieve",
+                "tags": [
+                    "api"
+                ],
+                "security": [
+                    {
+                        "cookieAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "No response body"
+                    }
+                }
+            }
+        },
         "/api/leave/": {
             "get": {
                 "operationId": "api_leave_list",
@@ -1177,7 +1195,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1234,7 +1252,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1251,6 +1269,52 @@
                 }
             }
         },
+        "/api/login/": {
+            "post": {
+                "operationId": "api_login_create",
+                "tags": [
+                    "api"
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Login"
+                            }
+                        },
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Login"
+                            }
+                        },
+                        "multipart/form-data": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Login"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "security": [
+                    {
+                        "cookieAuth": []
+                    },
+                    {}
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Login"
+                                }
+                            }
+                        },
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/me/": {
             "get": {
                 "operationId": "api_me_retrieve",
@@ -1259,7 +1323,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1284,7 +1348,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1330,7 +1394,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1347,52 +1411,6 @@
                 }
             }
         },
-        "/api/refresh-token/": {
-            "post": {
-                "operationId": "api_refresh_token_create",
-                "tags": [
-                    "api"
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/RefreshToken"
-                            }
-                        },
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "$ref": "#/components/schemas/RefreshToken"
-                            }
-                        },
-                        "multipart/form-data": {
-                            "schema": {
-                                "$ref": "#/components/schemas/RefreshToken"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "security": [
-                    {
-                        "tokenAuth": []
-                    },
-                    {}
-                ],
-                "responses": {
-                    "200": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/RefreshToken"
-                                }
-                            }
-                        },
-                        "description": ""
-                    }
-                }
-            }
-        },
         "/api/role/": {
             "get": {
                 "operationId": "api_role_list",
@@ -1401,7 +1419,7 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1429,58 +1447,13 @@
                 ],
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     },
                     {}
                 ],
                 "responses": {
                     "200": {
                         "description": "No response body"
-                    }
-                }
-            }
-        },
-        "/api/token/": {
-            "post": {
-                "operationId": "api_token_create",
-                "tags": [
-                    "api"
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "$ref": "#/components/schemas/AuthToken"
-                            }
-                        },
-                        "multipart/form-data": {
-                            "schema": {
-                                "$ref": "#/components/schemas/AuthToken"
-                            }
-                        },
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/AuthToken"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "security": [
-                    {
-                        "tokenAuth": []
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/AuthToken"
-                                }
-                            }
-                        },
-                        "description": ""
                     }
                 }
             }
@@ -1523,7 +1496,7 @@
                 },
                 "security": [
                     {
-                        "tokenAuth": []
+                        "cookieAuth": []
                     }
                 ],
                 "responses": {
@@ -1635,22 +1608,6 @@
                 "required": [
                     "employee",
                     "time_in"
-                ]
-            },
-            "AuthToken": {
-                "type": "object",
-                "properties": {
-                    "email": {
-                        "type": "string",
-                        "format": "email"
-                    },
-                    "password": {
-                        "type": "string"
-                    }
-                },
-                "required": [
-                    "email",
-                    "password"
                 ]
             },
             "Benefit": {
@@ -2470,6 +2427,22 @@
                     }
                 }
             },
+            "Login": {
+                "type": "object",
+                "properties": {
+                    "email": {
+                        "type": "string",
+                        "format": "email"
+                    },
+                    "password": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "email",
+                    "password"
+                ]
+            },
             "Me": {
                 "type": "object",
                 "properties": {
@@ -2583,18 +2556,6 @@
                     "updated_at"
                 ]
             },
-            "RefreshToken": {
-                "type": "object",
-                "properties": {
-                    "token_key": {
-                        "type": "string",
-                        "maxLength": 500
-                    }
-                },
-                "required": [
-                    "token_key"
-                ]
-            },
             "Role": {
                 "type": "object",
                 "properties": {
@@ -2694,11 +2655,10 @@
             }
         },
         "securitySchemes": {
-            "tokenAuth": {
+            "cookieAuth": {
                 "type": "apiKey",
-                "in": "header",
-                "name": "Authorization",
-                "description": "Token-based authentication with required prefix \"Token\""
+                "in": "cookie",
+                "name": "sessionid"
             }
         }
     }
